# genuine.dev

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Caddyfile  docker-compose.prod.yml  docker-compose.yml  justfile
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 0001_documents.sql  0002_users.sql  0003_subscribers.sql  0004_comments.sql  0005_notifications.sql  0006_document_revisions.sql
backend/src/: config.rs  error.rs  lib.rs  main.rs  server.rs  telemetry.rs
backend/src/api/: admin.rs  auth.rs  content.rs  error.rs  feeds.rs  mod.rs  newsletter.rs  notifications.rs  state.rs
backend/src/app/: mod.rs  ports.rs
backend/src/domain/: document.rs  mod.rs  slug.rs
backend/src/infra/: auth.rs  db.rs  mailer.rs  mod.rs  notifications.rs  render.rs  repo.rs  scheduler.rs  seed.rs  storage.rs  subscribers.rs
docs/: ARCHITECTURE.md  BUILD-STATE.md  CHANGELOG.md  INDEX.md  PHASE4-UI-PARITY.md  REACT-MIGRATION.md  ROADMAP.md  ui_mockups.html
docs/mockups/: notiq_portfolio.html  ui-ux-mockup.html
frontend/: Dockerfile  eslint.config.mjs  next.config.mjs  package-lock.json  package.json
frontend/app/: layout.tsx  not-found.tsx  page.tsx
frontend/components/: AboutDocPage.tsx  AboutShell.tsx  AdminLogout.tsx  AppChrome.tsx  CommandPalette.tsx  Comments.tsx  DocArticle.tsx  DocInteractive.tsx  EditButton.tsx  EditorForm.tsx  Footer.tsx  HomePage.tsx  KeyboardShortcuts.tsx  Nav.tsx  NavPolybar.tsx  NowDocPage.tsx  NowPage.tsx  PanelDocPage.tsx  PostComments.tsx  (+15 more)
scripts/: backup.sh
(+107 files in other folders)
