[package]
name = "genuine-folio"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "fs"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "compression-gzip", "cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "time", "migrate"] }
dotenvy = "0.15"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
comrak = "0.52"
syntect = "5.3"
uuid = { version = "1", features = ["serde", "v7"] }
time = { version = "0.3", features = ["serde"] }
argon2 = "0.5"
jsonwebtoken = "9"

[profile.release]
codegen-units = 1
lto = true
